Fix card image size, align images

--- a/style.css
+++ b/style.css
@@ -121,9 +121,10 @@ li {
 }
 
 .card img {
-	max-width: 100%;
+	max-width: 75%;
 	border-radius: 50%;
 	padding: 100px;
+	margin: 0 auto;
 }
 
 @media (min-width: 500px) {
@@ -134,24 +135,23 @@ li {
 
 	.card img {
 		padding: 15px;
-		margin: 0px;
+		margin: 0 auto;
 	}
 }
 
 .card .card-content {
-	margin-top: 20px;
+	margin-top: 15px;
 	flex: 1 1 auto;
 }
 
 .card p,
 .card h3 {
-	padding: 0 10px;
+	padding: 15px;
 }
 .card button {
-	background: gray;
-	border: solid 2px;
-	color: white;
-	margin: 20px auto 20px 20px;
+	border: solid 1px;
+	border-radius: 15%;
+	margin: 15px auto 15px 15px;
 	padding: 8px;
 }
 
